# gammon-machine

./: README.md  compete.js  elm-package.json  game.js  gammon-old.elm  gammon.elm  move-validator.js  player.js  pyproject.toml  structure.elm  trainer.js
elm-stuff/: exact-dependencies.json
elm-stuff/build-artifacts/0.18.0/wheresrhys/gammon-machine/1.0.0/: Dice.elmi  Dice.elmo  Game.elmi  Game.elmo  Main.elmi  Main.elmo  Repl.elmi  Repl.elmo  Slot.elmi  Slot.elmo
lib/: board.elm  dice.elm  game.elm  move.elm  slot.elm
