[project]
name = "gammon-machine"
version = "0.1.0"
description = "Machine learning project to train a backgammon player"
authors = [
    {name = "Rhys Evans",email = "wheresrhys@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
